<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="app_name">Travel Hub</string>
    <string name="app_login_user_hint">Email</string>
    <string name="app_login_pwd_hint">Password</string>
    <string name="community_nav">Community</string>
    <string name="map_nav">Map</string>
    <string name="profile_nav">Profile</string>
    <string name="home_nav">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_nav">Add</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="txt_or">or</string>
    <string name="google_login">Login with Google</string>
    <string name="register">Register</string>
    <string name="new_account">New to Travel Hub?</string>
    <string name="error_email">Email format not valid</string>
    <string name="check_login_data_message">data may be wrong</string>
    <string name="pwd_error_numberOfcharacters">Password must be 6 characters or more</string>
    <string name="pwd_error_capitalLetter">The password must contain at least one capital letter</string>
    <string name="pwd_error_lowerCaseLetter">The password must contain at least one lowercase letter</string>
    <string name="pwd_error_number">The password must contain at least one number</string>
    <string name="pwd_error_specialCharacter">The password must contain at least one special character</string>
    <string name="pwd_valid">Password is valid</string>
    <string name="mail_valid">Mail is valid</string>
    <string name="name_register">Username</string>
    <string name="email_register">Email</string>
    <string name="register_buttonRegister">Register</string>
    <string name="error_login_password_message">the password is invalid</string>
    <string name="error_login_user_message">there is no user record corresponding to this identifier</string>
    <string name="unexpected_error">unexpected error</string>
    <string name="error_user_collision_message">this email address is already in use by another account</string>
    <string name="error_empty_username">empty username</string>
    <string name="error_no_google_account_found_message">No Google accounts have been found</string>
    <string name="error_username_not_available">username already taken</string>
    <string name="viewProfile">View Profile</string>
    <string name="personal_informations">Personal Informations</string>
    <string name="username" translatable="false">Username</string>
    <string name="user_name">Name</string>
    <string name="user_surname">Surname</string>
    <string name="user_birth">Birth</string>
    <string name="user_email" translatable="false">Email*</string>
    <string name="travel_tab_dashboard">Dashboard</string>
    <string name="travel_tab_itinerary">Itinerary</string>
    <string name="travel_title">Title*</string>
    <string name="travel_title_hint">Title</string>
    <string name="travel_no_description">Scrivi una descrizione del tuo viaggio. Raccontaci qualcosa a riguardo!</string>
    <string name="travel_edit">Edit Travel</string>
    <string name="travel_delete">Delete Travel</string>
    <string name="travel_departure">Departure</string>
    <string name="travel_departure_hint">Departure</string>
    <string name="add_travel">Add Travel</string>
    <string name="travel_no_title">Travel has no title</string>
    <string name="travel_description_hint">Descriprion</string>
    <string name="travel_duration">Duration</string>
    <string name="travel_progress">Progress</string>
    <string name="travel_participants">Participants</string>
    <string name="travel_description">Description</string>
    <string name="travel_segment_number">Destinations</string>
    <string name="travel_segment_no_date">No date</string>
    <string name="error_delete_participant">Error deleting participant, cannot delete the travel Creator</string>
    <string name="subscription">Subscription</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="email_notifications">Email Notifications</string>
    <string name="new_message">New Message</string>
    <string name="new_updates">New Updates</string>
    <string name="Advertising">Advertising</string>
    <string name="saveSettings">Save Settings</string>
    <string name="privacyAndSecurity">Privacy and Security</string>
    <string name="privacyPolicy" translatable="false">Privacy Policy</string>
    <string name="privacyPolicyText" translatable="false">
        Last updated: January 31, 2024
        \nThis Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.
        \n\nWe use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy. This Privacy Policy has been created with the help of the Free Privacy Policy Generator.
    </string>
    <string name="interpretationAndDefinitions" translatable="false">Interpretation and Definitions</string>
    <string name="interpretation" translatable="false">Interpretation</string>
    <string name="interpretationText" translatable="false">
    The words of which the initial letter is capitalized have meanings defined under the following conditions.
    \nThe following definitions shall have the same meaning regardless of whether they appear in singular or in plural.
    </string>
    <string name="definitions" translatable="false">Definitions</string>
    <string name="definitionsText" translatable="false">
        For the purposes of this Privacy Policy:
        \n\n<b>Account</b> means a unique account created for You to access our Service or parts of our Service.
        \n\n<b>Affiliate</b> means an entity that controls, is controlled by or is under common control with a party, where "control" means ownership of 50% or more of the shares, equity interest or other securities entitled to vote for election of directors or other managing authority.
        \n\n<b>Application</b> refers to TravelHub, the software program provided by the Company.
        \n\n<b>Company</b> (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to TravelHub.
        \n\n<b>Country</b> refers to: Italy
        \n\n<b>Device</b> means any device that can access the Service such as a computer, a cellphone or a digital tablet.
        \n\n<b>Personal Data</b> is any information that relates to an identified or identifiable individual.
        \n\n<b>Service</b> refers to the Application.
        \n\n<b>Service Provider</b> means any natural or legal person who processes the data on behalf of the Company. It refers to third-party companies or individuals employed by the Company to facilitate the Service, to provide the Service on behalf of the Company, to perform services related to the Service or to assist the Company in analyzing how the Service is used.
        \n\n<b>Usage Data</b> refers to data collected automatically, either generated by the use of the Service or from the Service infrastructure itself (for example, the duration of a page visit).
        \n\n<b>You</b> means the individual accessing or using the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.
         </string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="return_to_the_previous_screen">Return to the previous screen</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="title">Title*</string>
    <string name="to_need">To*</string>
    <string name="save">Save</string>
    <string name="from_need">From*</string>
    <string name="description">Description</string>
    <string name="title_activity_add_travel" translatable="false">AddTravel</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="travel_images">Travel images</string>
    <string name="edit">Edit</string>
    <string name="map_preview">Map preview</string>
    <string name="ongoing_travel">Ongoing Travel</string>
    <string name="other_travels">Other Travels</string>
    <string name="dash">-</string>
    <string name="destination">Destination</string>
    <string name="add_destination">Add destination</string>
    <string name="add_friends_username">Add friends usernames</string>
    <string name="update_from_gallery">Update from gallery</string>
    <string name="open_camera" translatable="false">open camera</string>
    <string name="title_empty_error" translatable="false">Empty title</string>
    <string name="date_empty_error" translatable="false">Date is missing</string>
    <string name="departure_empty_error" translatable="false">Empty departure location</string>
    <string name="destination_error" translatable="false">Empty destination location</string>
    <string name="personal_info_description">In this section you can view your personal information, such as name, email address and telephone number. If you wish to update or change this information, you can do so easily by clicking on the different text fields. Keep your data always up to date for a better and personalized experience.</string>
    <string name="departure">Departure*</string>
    <string name="date_over_limit" translatable="false">This date exceeds the travel end date</string>
    <string name="date_under_limit" translatable="false">This date is before the travel start date</string>
    <string name="title_activity_edit_travel" translatable="false">EditTravelActivity</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
</resources>