<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/generalSettingsGroup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".ui.profile.SettingsFragment">

        <Button
            android:id="@+id/buttonBack"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="2dp"
            android:layout_marginBottom="8dp"
            app:icon="@drawable/baseline_arrow_back_ios_new_24"
            app:iconTint="#000000" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                        <TextView
                            android:id="@+id/generalSettings"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/general"
                            android:textAlignment="viewStart"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <Spinner
                            android:id="@+id/themeSettingsSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="48dp" />

                        <TextView
                            android:id="@+id/notificationsSettings"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/notifications"
                            android:textAlignment="viewStart"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <Switch
                            android:id="@+id/switchPushNotifications"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:minHeight="48dp"
                            android:text="@string/push_notifications"
                            android:textAlignment="viewStart"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />

                        <Switch
                            android:id="@+id/switchEmailNotifications"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="48dp"
                            android:text="@string/email_notifications"
                            android:textAlignment="viewStart"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />

                        <Switch
                            android:id="@+id/switchNewMessage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="48dp"
                            android:text="@string/new_message"
                            android:textAlignment="viewStart"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />

                        <Switch
                            android:id="@+id/switchNewUpdates"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="48dp"
                            android:text="@string/new_updates"
                            android:textAlignment="viewStart"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />

                        <Switch
                            android:id="@+id/switchAdvertising"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="48dp"
                            android:text="@string/Advertising"
                            android:textAlignment="viewStart"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />

                        <Button
                            android:id="@+id/saveSettingsButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/saveSettings"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                </LinearLayout>
        </ScrollView>
</LinearLayout>




