<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.SettingsActivity"
    android:padding="12dp">

    <ImageView
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_new_24" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Impostazioni"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:orientation="vertical"
        android:padding="12dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_personal_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_informations"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:icon="@drawable/baseline_person_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_subscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/subscription"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:icon="@drawable/baseline_book_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/settings"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:icon="@drawable/baseline_settings_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/privacyAndSecurity"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:icon="@drawable/baseline_lock_24" />

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:navGraph="@navigation/nav_graph"
        tools:layout="@layout/fragment_home"/>



</androidx.constraintlayout.widget.ConstraintLayout>