<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/editSegmentFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.travels.EditTravelSegment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/destination_form_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/destination"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="24dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_form_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#546E7A"
                app:helperTextEnabled="false"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/from_form"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".35"
            android:layout_height="wrap_content"
            android:hint="@string/from"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/destination_form_edit_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_txt_from_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textColorHint="#546E7A"
                app:helperTextEnabled="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/to_form"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".35"
            android:layout_height="wrap_content"
            android:hint="@string/to"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/destination_form_edit_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_txt_to_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textColorHint="#546E7A"
                app:helperTextEnabled="false" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/description"
            app:layout_constraintHeight_percent=".23"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/from_form"
            app:layout_constraintWidth_percent=".7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_form_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="5"
                android:gravity="top"
                android:textColorHint="#546E7A"
                app:helperTextEnabled="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addDestinationButtonSegment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_destination"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="24dp"
            android:layout_marginRight="24dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>